build/kubernetes/staging-gcp-kube/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-gcp-kube-tone-api-deployment
  namespace: staging-gcp-kube
  labels:
    app: staging-gcp-kube-tone-api
    environment: staging-gcp-kube
spec:
  replicas: 2
  selector:
    matchLabels:
      app: staging-gcp-kube-tone-api
  template:
    metadata:
      labels:
        app: staging-gcp-kube-tone-api
        environment: staging-gcp-kube
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: staging-gcp-kube-tone-api
          image: us-central1-docker.pkg.dev/project-ec49f357-55e7-4d34-b0f/tone/tone-staging-gke:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "256m"
              memory: "1Gi"
